# jamming.fun

./: .env.example  .gitignore  README.md  agents.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: ci.yml
apps/api/: eslint.config.mjs  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/prisma/migrations/0001_init/: migration.sql
apps/api/prisma/migrations/0002_expand_track_id_enum/: migration.sql
apps/api/src/: app.test.ts  app.ts  config.ts  server.ts
apps/api/src/lib/: http.ts  ids.ts  prisma.ts
apps/api/src/routes/: actions.ts  api.ts  health.ts
apps/api/src/services/: gameStore.ts  prismaMirror.ts  runtime.ts
apps/api/src/ws/: roomHub.ts
apps/web/: eslint.config.mjs  index.html  package.json  tsconfig.json
apps/web/public/: actions.json
apps/web/public/samples/hydrogen-lite/: LICENSE.md
apps/web/src/: App.tsx
apps/web/src/hooks/: usePlayhead.ts  useRoomSocket.ts  useSolanaWallet.ts
apps/web/src/lib/: apiClient.ts  env.ts  trackVisuals.ts  wsClient.ts
apps/web/src/pages/: ArtistView.tsx  LandingPage.tsx  UserView.tsx
apps/web/src/styles/: global.css
docs/: api-contracts.md  architecture.md  demo-runbook.md
infra/: docker-compose.yml
programs/jamming_prediction/: Cargo.toml  README.md
programs/jamming_prediction/src/: constants.rs  contexts.rs  error.rs  events.rs  helpers.rs  lib.rs  params.rs  state.rs
programs/jamming_prediction/src/instructions/: mod.rs
